@@ -1,3 +1,12 @@
+2002-02-22  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm/events.c:
+	fixed problem with root bindings and xfishtank
+
+	* fvwm/windowlist.c (CMD_WindowList):
+	applied patch by to Darren Marshall to fix placement of window list on
+	wrong xinerama screen
+
 2002-02-07  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/module_interface.c (PositiveWrite):
